# Easy-Eva-Studio-v7.5.

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  audit_benchmark_report.txt  audit_benchmark_report_20251231.txt  audit_report.txt  build.sh  final_benchmark_3m.py  index.html  sbom.json  technical_specs.md  test_simple.c  total_crypto_benchmark.sh
.github/workflows/: governance_check.yml
docs/: AUDIT_GUIDE.md
easy_eva_sonic/: Cargo.toml  FINAL_STRESS_TEST_2025.json  FINAL_SUCCESS_SUMMARY.md  INCIDENT_REPORT.md  README.md  REPORT_2025.json  analyze_backups.py  backup_sonic.sh  benchmark_sonic.sh  blockchain_master_hash.json  blockchain_proof.md  blockchain_security_report_20260102_173659.json  cargo.tomel  cargo.toml  docker_quarantine.py  easy_eva_config.sh  emergency_backup_20260102_175411.db  emergency_backup_20260102_175446.db  emergency_backups.json  eva_blockchain_security.py  isolate.py  menu.py  pitch_dashboard.sh  quick_status.sh  security_baseline.json  security_monitor.py  security_overview.sh  simple_menu.py  technical_specs.md  validate_fips.py
easy_eva_sonic/backups/v10.8.10_20251231_110131/: Cargo.toml  main.rs
easy_eva_sonic/src/: balancer.rs  comms.rs  main.rs  main.rs{
examples/: basic_example.c
include/: hybrid_kem.h
scripts/: audit_bundle.sh  generate_sbom.py  quick_backup.sh
src/: hybrid_kem.c  lib.rs
src/kem/: dilithium.c  kyber.c
src/utils/: random.c
