[package]
name = "easyfhe_core"
version = "7.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "studio_validator"
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.0"
anyhow = "1.0"
log = "0.4"
# Cargo.toml (Ende der Datei)

[profile.release]
# Aktiviert die Linker-Flags, um die main-Funktion zu ignorieren (--no-entry)
# und die Wasm-Größe weiter zu optimieren (lto, codegen-units=1).
lto = true
codegen-units = 1
panic = "abort" # Verwendet kein unwinding-Code

