[package]
name = "easy_eva_sonic"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
# Basis Tools
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# KI Engine (Candle v0.8.0 Stack)
candle-core = "0.8.0"
candle-transformers = "0.8.0"
candle-nn = "0.8.0"
tokenizers = "0.19.1"

# Kommunikation & Async (Für GitHub)
octocrab = "0.38.0"
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"

