[package]
name = "easy_eva_sonic"
version = "10.9.0"
edition = "2021"

[dependencies]
# Kryptografie
bulletproofs = "4.0"
curve25519-dalek-ng = "4.1"
merlin = "3.0"
rand = "0.8"

# KI & System
anyhow = "1.0"
candle-core = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.15.2"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# GitHub Kommunikation
octocrab = "0.38.0"
chrono = "0.4"

